man3_MANS	= iv_deinit.3				\
		  iv_examples.3				\
		  iv_fd.3				\
		  iv_fd_set_handler_err.3		\
		  iv_fd_set_handler_in.3		\
		  iv_fd_set_handler_out.3		\
		  iv_init.3				\
		  iv_invalidate_now.3			\
		  iv_main.3				\
		  iv_quit.3				\
		  iv_register_fd.3			\
		  iv_register_task.3			\
		  iv_register_timer.3			\
		  iv_task.3				\
		  iv_time.3				\
		  iv_timer.3				\
		  iv_unregister_fd.3			\
		  iv_unregister_task.3			\
		  iv_unregister_timer.3			\
		  iv_validate_now.3			\
		  ivykis.3
