man3_MANS	= iv_deinit.3				\
		  iv_examples.3				\
		  iv_fd.3				\
		  iv_fd_register.3			\
		  iv_fd_register_try.3			\
		  iv_fd_set_handler_err.3		\
		  iv_fd_set_handler_in.3		\
		  iv_fd_set_handler_out.3		\
		  iv_fd_unregister.3			\
		  iv_init.3				\
		  iv_inited.3				\
		  iv_invalidate_now.3			\
		  iv_main.3				\
		  iv_quit.3				\
		  iv_task.3				\
		  iv_task_register.3			\
		  iv_task_unregister.3			\
		  iv_time.3				\
		  iv_timer.3				\
		  iv_timer_register.3			\
		  iv_timer_unregister.3			\
		  iv_validate_now.3			\
		  ivykis.3

EXTRA_DIST	= ${man3_MANS}
