man3_MANS	= iv_event.3				\
		  iv_event_post.3			\
		  iv_event_raw.3			\
		  iv_event_raw_post.3			\
		  iv_event_raw_register.3		\
		  iv_event_raw_unregister.3		\
		  iv_event_register.3			\
		  iv_event_unregister.3			\
		  iv_popen.3				\
		  iv_popen_request_close.3		\
		  iv_popen_request_submit.3		\
		  iv_signal.3				\
		  iv_signal_register.3			\
		  iv_signal_unregister.3		\
		  iv_thread.3				\
		  iv_thread_create.3			\
		  iv_thread_set_debug_state.3		\
		  iv_wait.3				\
		  iv_wait_interest_register.3		\
		  iv_wait_interest_register_spawn.3	\
		  iv_wait_interest_unregister.3		\
		  iv_work.3				\
		  iv_work_pool_create.3			\
		  iv_work_pool_put.3			\
		  iv_work_pool_submit_work.3
